Added Facebook Like n Share & Bot

--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
     <script type="module" src="./js/bar-graph.js"></script>
   </head>
   <body>
+  <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v5.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+	js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0&appId=213994879344801&autoLogAppEvents=1"></script>
+
+      <!-- Your customer chat code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="280259706242511"
+  theme_color="#45dbbc">
+      </div>
     <section id="model">
       <h1>Plastic Analyser</h1>
       <h2>Hold up a plastic article to know its resin code.</h2>
@@ -31,6 +55,7 @@
       <div class="copyright">
         &copy; Nishith P
       </div>
+    <div class="fb-like" data-href="https://nishithp2004.github.io/Plastic-Analyser" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
     </section>
 
     <script type="module">
