--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- these load our code: -->
     <script type="module" src="./js/model-runner.js"></script>
     <script type="module" src="./js/bar-graph.js"></script>
+    <!-- Theme Tag -->
+    <meta name="theme-color" content="#006994">
   </head>
   <body>
   <div id="fb-root"></div>
@@ -52,6 +54,7 @@
       <div id="graph-wrapper"></div>
     </section>
     <section id="info">
+      <h2><a href="https://docs.google.com/document/d/1vVY15QeMPNTJi7sabmBjP6BIRsTzaDHwD_3kKqpBo9A">More Info</a></h2>
       <div class="copyright">
         &copy; Nishith P
       </div>
