--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       //  `. ___.' /_____.'/ | |   |   /     |_|  |_|  |_|           \\    /
       //           \_____|/  |_|   `'-'                               `'--'
       // train your own model using [TODO_TM2_URL], and replace this URL with your own
-      let URL = "https://teachablemachine.withgoogle.com/models/DAK9jlafS/";
+      let URL = "https://teachablemachine.withgoogle.com/models/KgAsxGnW-/";
 
       // setupBarGraph is defined in the js/bar-graph.js file
       setupBarGraph(URL);
